--- a/GestionBiliotecaXBa/src/main/resources/application.properties
+++ b/GestionBiliotecaXBa/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.jpa.hibernate-dll=auto=update 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
