--- a/GestionBiliotecaXBa/src/main/resources/application.properties
+++ b/GestionBiliotecaXBa/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=GestionBiliotecaXBa
-spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
+spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.hibernate-dll=auto=update 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
